--- a/src/app/components/sales/menuvent/menuvent.component.html
+++ b/src/app/components/sales/menuvent/menuvent.component.html
@@ -211,7 +211,7 @@
         <br><br><br>
         <div class="button-container">
             <button class="btn btn-primary" [disabled]="identificacion == '' || nombre == '' || correo == '' || ciudad == '' || direccion == '' || telefono == '' || lstDetalleMovimientos.length == 0" (click)="finalizarPedido()">
-                <span style="color: white"> Continuar</span>
+                <span style="color: white ; font-size: 20px;"> CONTINUAR</span>
             </button>
         </div>
     </div>
