--- a/src/app/components/sales/ver-carrito/ver-carrito.component.html
+++ b/src/app/components/sales/ver-carrito/ver-carrito.component.html
@@ -12,14 +12,22 @@
         <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="row-border hover">
             <thead style="color: #636363;">
                 <tr>
-                    <th style="width: 20%; ">IMAGEN</th>
-                    <th style="width: 20%; ">PRODUCTO</th>
-                    <th style="width: 20%; ">NOMBRE</th>
-                    <th style="width: 20%; ">CANTIDAD</th>
-                    <th style="width: 20%; ">PVP</th>
-                    <th style="width: 20%; ">COSTO</th>
-                    <th style="width: 20%; ">TARIFA</th>
-                    <th style="width: 20%; ">STOCK ACTUAL</th>
+                    <tr>
+                        <th style="width: 15%; ">IMAGEN</th>
+                        <th style="width: 15%; ">PRODUCTO</th>
+                        <th style="width: 8%; ">CATEGORIA</th>
+                        <th style="width: 8%; ">TIPO</th>
+                        <th style="width: 8%; ">MARCA</th>
+                        <th style="width: 8%; ">MODELO</th>
+                        <th style="width: 10%; ">COLOR</th>
+                        <th style="width: 8%; ">TAMAÑO</th>
+                        <th style="width: 15%; ">CARACTERISTICA</th>
+                        <th style="width: 8%; ">GENERO</th>
+                        <th style="width: 15%; ">CANTIDAD</th>
+                        <th style="width: 10%; ">PVP</th>
+                        <th style="width: 15%; ">IVA</th>
+                        <th style="width: 15%; ">ICE</th>
+                        <th style="width: 8%; ">STOCK</th>
                     <th style="width: 1%; "></th>
                     <th style="width: 20%; "></th>
                 </tr>
@@ -32,13 +40,21 @@
                     </td>
                     <td>{{inventario.Producto}}</td>
                     <td>{{inventario.producto_nombre}}</td>
+                    <td>{{inventario.categoria}}</td>
+                    <td>{{inventario.linea}}</td>
+                    <td>{{inventario.marca}}</td>
+                    <td>{{inventario.modelo}}</td>
+                    <td>{{inventario.color}}</td>
+                    <td>{{inventario.talla}}</td>
+                    <td>{{inventario.atributo}}</td>
+                    <td>{{inventario.genero}}</td>
                     <td>
                         <input class="cool-input" (input)="onInput($event)" *ngIf="true" type="text"
                             [(ngModel)]="inventario.cantidad" />
                     </td>
                     <td>{{inventario.pvp2}}</td>
-                    <td>{{inventario.costo}}</td>
                     <td>{{inventario.tarifa_ice_iva}}</td>
+                    <td>{{inventario.tarifa_ice_iva1}}</td>
                     <td>{{ parseInt(inventario.stock! ) | number: '.0-0' }}</td>
                     <td>
                         <i *ngIf="inventario.productoExistente" class="fas fa-check-circle"
