--- a/src/app/components/sales/ver-carrito/ver-carrito.component.css
+++ b/src/app/components/sales/ver-carrito/ver-carrito.component.css
@@ -41,31 +41,6 @@
     right: 0;
   }
 
-  .table-container {
-    max-height: 500px; /* Ajusta este valor según tus necesidades */
-    max-width: 800px;
-    overflow-y: auto;
-    overflow-x: hidden;
-}
-
-/* Estilos personalizados para el scrollbar */
-.table-container::-webkit-scrollbar {
-  width: 5px; /* Ancho del scrollbar */
-  right: 10px; /* Ajusta esta distancia según tus necesidades */
-}
-
-.table-container::-webkit-scrollbar-track {
-  background-color: #f1f1f1; /* Color de fondo del track del scrollbar */
-}
-
-.table-container::-webkit-scrollbar-thumb {
-  background-color: #888; /* Color del thumb del scrollbar */
-  border-radius: 5px; /* Borde redondeado del thumb del scrollbar */
-}
-
-.table-container::-webkit-scrollbar-thumb:hover {
-  background-color: #555; /* Color del thumb del scrollbar al pasar el cursor por encima */
-}
 
 .small-input {
   width: 50px; /* Ajusta el ancho según tus necesidades */
@@ -107,10 +82,11 @@ font-size: 14px;
 }
 
 .table-container {
-  max-height: 1200px; /* Ajusta este valor según tus necesidades */
-  max-width: 1200px;
+  max-height: 470px; /* Ajusta este valor según tus necesidades */
+  max-width: 1500px;
   overflow-y: auto;
-  overflow-x: hidden;
+  overflow-x: auto;
+  font-size: 12px;
 }
 
 /* Estilos personalizados para el scrollbar */
