--- a/src/app/components/shooping/menucompr/menucompr.component.html
+++ b/src/app/components/shooping/menucompr/menucompr.component.html
@@ -19,12 +19,7 @@
                     </span>
                 </a>
             </div>
-            <div class="d-flex justify-content-end">
-                <button class="btn button carrito-button" (click)="verCarrito()" [disabled]="buttonsDisabled">
-                    <fa-icon [icon]="faCartPlus" [size]="'lg'" style="color: #ffffff; margin-right: 5px;"></fa-icon>
-                    AÑADIR
-                </button>
-            </div>
+            <br><br>
             <div class="form-group" style="margin-top: 20px;">
                 <div class="row">
                     <div class="col-md-4">
@@ -90,6 +85,13 @@
                         </div>
                     </div>
                 </div>
+            </div>
+            <br><br>
+            <div class="d-flex justify-content-left">
+                <button class="btn button carrito-button" (click)="verCarrito()" [disabled]="buttonsDisabled">
+                    <fa-icon [icon]="faCartPlus" [size]="'lg'" style="color: #ffffff; margin-right: 5px;"></fa-icon>
+                    AÑADIR
+                </button>
             </div>
             <br><br>
             <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="row-border hover">
