--- a/src/app/components/dashboard-cl/dashboard-cl.component.html
+++ b/src/app/components/dashboard-cl/dashboard-cl.component.html
@@ -7,7 +7,7 @@
         </button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <mat-menu #menu="matMenu">
             <a [routerLink]="[{ outlets: { contentClient: ['usuario'] } }]" class="mat-menu-item">Perfil</a>
-            <a [routerLink]="[{ outlets: { contentClient: ['usuario'] } }]" class="mat-menu-item">Configuracion</a>
+            <a [routerLink]="[{ outlets: { contentClient: ['cofiguracion-user'] } }]" class="mat-menu-item">Configuracion</a>
             <a class="mat-menu-item" (click)="logout()">Salir</a>
         
         </mat-menu>                   
