--- a/src/app/components/users/usuario/usuario.component.html
+++ b/src/app/components/users/usuario/usuario.component.html
@@ -7,7 +7,7 @@
             width="35" height="35"><mat-icon class="mat-18">ligature</mat-icon>
         </button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <mat-menu #menu="matMenu">
-            <a class="mat-menu-item" href="./navegation-adm/(contentAdmin:usuario)">Perfil</a>
+            <a class="mat-menu-item" (click)="onPass1()">Perfil</a>
             <a [routerLink]="[{ outlets: { contentAdmin: ['usuario'] } }]" class="mat-menu-item">Configuracion</a>
             <a class="mat-menu-item" (click)="logout()">Salir</a>
         
