Formato PDF terminado

--- a/src/app/components/sales/factura/factura.component.css
+++ b/src/app/components/sales/factura/factura.component.css
@@ -2,10 +2,12 @@ body {
     font-family: Arial, sans-serif;
     margin: 20px;
 }
+
 .factura {
     display: flex;
     justify-content: space-between;
 }
+
 .encabezado {
     text-align: left;
     font-size: 30px;
@@ -13,12 +15,14 @@ body {
     color: red;
     margin-bottom: 20px;
 }
+
 .encabezado2 {
     text-align: left;
     font-size: 20px;
     font-weight: bold;
     margin-bottom: 20px;
 }
+
 .info-comercial {
     display: flex;
     justify-content: space-between;
@@ -31,8 +35,10 @@ body {
 .info-comercial,
 .info-cliente {
     flex: 1;
-    padding: 10px; /* Ajusta el padding según tus necesidades */
-    border: 1px solid #000000; /* Añade un borde para visualizar mejor la separación */
+    padding: 10px;
+    /* Ajusta el padding según tus necesidades */
+    border: 1px solid #000000;
+    /* Añade un borde para visualizar mejor la separación */
     box-sizing: border-box;
     margin-inline: 10px;
 }
@@ -46,11 +52,96 @@ body {
 }
 
 .invoice-details {
-    border: 1px solid #000000;
     border-radius: 20px;
-    padding: 40px;
+    padding: 10px;
     margin-bottom: 20px;
     overflow-x: auto;
-    margin: 10px;
-    box-sizing: border-box;
-  }
+}
+
+.invoice-details2 {
+    border-radius: 20px;
+    padding: 1px;
+    margin-bottom: 20px;
+    overflow-x: auto;
+}
+
+.custom-table {
+    width: 100%;
+    border-collapse: collapse;
+    border: 1px solid #000000;
+    border-radius: 10px;
+}
+
+
+
+.custom-table th,
+.custom-table td {
+    border: 1px solid #000000;
+    padding: 8px;
+    text-align: center;
+}
+
+.custom-table th {
+    background-color: #f2f2f2;
+}
+
+.custom-table2 {
+    width: calc(50% - 10px);
+    /* Ajusta el ancho según tus necesidades */
+    border-collapse: collapse;
+    border: 1px solid #000000;
+    border-radius: 10px;
+    margin-bottom: 20px;
+}
+
+.aaa {
+    background-color: #f2f2f2;
+}
+
+.custom-table2 th,
+.custom-table2 td {
+    border: 1px solid #000000;
+    padding: 8px;
+    text-align: center;
+}
+
+.custom-table2 th {
+    background-color: #f2f2f2;
+}
+.custom-table3 {
+    width: 50%;
+    height: 50px;
+    margin-top: 50px;
+    margin-right: 40px;
+    border-collapse: collapse;
+    border: 1px solid #000000;
+    border-radius: 10px;
+}
+
+.custom-table3 th,
+.custom-table3 td {
+    border: 1px solid #000000;
+    padding: 8px;
+    text-align: center;
+}
+
+.custom-table3 th {
+    background-color: #f2f2f2;
+}
+.table-container {
+    display: flex;
+    margin-inline: 10px;
+    justify-content: space-between;
+}
+
+.labelAdic {
+    text-align: left;
+    width: 47.5%;
+    margin-left: 10px;
+    border: 1px solid #000;
+    padding: 10px;
+}
+
+.separ {
+    margin-right: 20px;
+}
