--- a/src/app/components/sales/factura/factura.component.html
+++ b/src/app/components/sales/factura/factura.component.html
@@ -1,64 +1,129 @@
-<div style="max-width: 95%; margin: 20px">
+<div style="max-width: 95%; margin: 20px; font-size: 12px;">
   <div id="htmlData">
-  <div class="factura">
-    <div class="info-comercial">
-      <div class="comercial">
-        <br><br>
-        <div class="encabezado">NO TIENE LOGO</div>
-        <br><br>
-        <div>Razón Social:GINA ELIZABETH</div>
-        <div>Nombre Comercial: BELA</div>
-        <div>Dirección Matriz: Av. Miraflores</div>
-        <div>Dirección Sucursal: Ambato</div>
-        <div>Obligado a llevar Contabilidad: NO</div>
+    <div class="factura">
+      <div class="info-comercial">
+        <div class="comercial">
+          <br><br>
+          <div class="encabezado">NO TIENE LOGO</div>
+          <br><br>
+          <div>Razón Social:{{razonSocial}}</div>
+          <div>Nombre Comercial: {{nombreComercial}}</div>
+          <div>Dirección Matriz: {{dir1}}</div>
+          <div>Dirección Sucursal: {{direccionAlm}}</div>
+          <div>Obligado a llevar Contabilidad: NO</div>
+        </div>
+      </div>
+      <div class="info-comercial">
+        <div class="comercial">
+          <div class="encabezado2">RUC: {{idFiscalSoc}}</div>
+          <div>FACTURA</div>
+          <div>Nro. {{facturaNro}}</div>
+          <div>Número de Autorización: {{claveAcceso}}</div>
+          <div>Fecha y Hora de Autorización: {{fechaAut}}</div>
+          <div>Ambiente: {{ambiente}}</div>
+          <div>Emisión: Normal</div>
+          <div>Clave de Acceso: {{claveAcceso}}</div>
+        </div>
       </div>
     </div>
-    <div class="info-comercial">
-      <div class="comercial">
-        <div class="encabezado2">RUC: 1850294875001</div>
-        <div>FACTURA</div>
-        <div>Nro. 001-001-000000001</div>
-        <div>Número de Autorización: 123738128738921372181231321</div>
-        <div>Fecha y Hora de Autorización: </div>
-        <div>Ambiente: PRUEBAS</div>
-        <div>Emisión: Normal</div>
-        <div>Clave de Acceso: 123738128738921372181231321</div>
+    <div class="info-cliente">
+      <div class="cliente">
+        <div>Razón Social / Nombre y Apellido: {{cliente}}</div>
+        <div>Identificación: {{idFiscalCliente}}</div>
+        <div>Fecha: {{fechaEmision | date: 'dd/MM/yyyy'}}</div>
+        <div>Dirección: {{direccionCl}}</div>
+      </div>
+    </div>
+    <div class="invoice-details">
+      <table class="custom-table">
+        <thead>
+          <tr>
+            <th style="width: 10%; ">Código</th>
+            <th style="width: 10%; ">Producto</th>
+            <th style="width: 10%; ">Cantidad</th>
+            <th style="width: 10%; ">Precio Uni.</th>
+            <th style="width: 10%; ">Descuento</th>
+            <th style="width: 10%; ">Precio Total</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let detalleMovimientos of lstDetalleMovimientos">
+            <td>{{detalleMovimientos.producto_id}}</td>
+            <td>{{detalleMovimientos.producto_nombre}}</td>
+            <td>{{detalleMovimientos.cantidad}}</td>
+            <td>{{detalleMovimientos.costo}}</td>
+            <td>{{detalleMovimientos.desc_add}}</td>
+            <td>{{detalleMovimientos.precio}}</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+    <div class="labelAdic">
+      <label for="" >INFORMACIÓN ADICIONAL:</label>
+      <br>
+      <label for="" class="separ">Teléfono: {{telefono}}</label>
+      <label for="" class="">Correo: {{email}}</label>
+    </div>
+    <div class="invoice-details2">
+      <div class="table-container">
+          <table class="custom-table3">
+            <thead>
+              <tr>
+                <th style="width: 10%; ">FORMA DE PAGO</th>
+                <th style="width: 10%; ">VALOR</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr *ngFor="let detallePago of lstDetallePagos">
+                <td>{{detallePago.nombre}}</td>
+                <td>{{detallePago.valor}}</td>
+              </tr>
+            </tbody>
+          </table>
+        <table class="custom-table2">
+          <tbody>
+            <tr>
+              <td class="aaa">SUBTOTAL 0%:</td>
+              <td>{{subtotal0}}</td>
+            </tr>
+            <tr>
+              <td class="aaa">SUBTOTAL 12%:</td>
+              <td>{{subtotal12}}</td>
+            </tr>
+            <tr>
+              <td class="aaa">SUBTOTAL NO SUJETO DE IVA:</td>
+              <td>{{subtotal0}}</td>
+            </tr>
+            <tr>
+              <td class="aaa">SUBTOTAL SIN IMPUESTOS:</td>
+              <td>{{subtotal12}}</td>
+            </tr>
+            <tr>
+              <td class="aaa">DESCUENTO:</td>
+              <td>{{descuento}}</td>
+            </tr>
+            <tr>
+              <td class="aaa">ICE:</td>
+              <td>{{ice}}</td>
+            </tr>
+            <tr>
+              <td class="aaa">IVA 12%:</td>
+              <td>{{iva}}</td>
+            </tr>
+            <tr>
+              <td class="aaa">PROPINA:</td>
+              <td>{{propina}}</td>
+            </tr>
+            <tr>
+              <td class="aaa">VALOR TOTAL:</td>
+              <td>{{valorTotal}}</td>
+            </tr>
+          </tbody>
+        </table>
       </div>
     </div>
   </div>
-  <div class="info-cliente">
-    <div class="cliente">
-      <div>Razón Social / Nombre y Apellido: DANIEL MONTERO</div>
-      <div>Identificación: 18261283812</div>
-      <div>Fecha: 22/08/2023</div>
-      <div>Dirección: Riobamba</div>
-    </div>
-
-  </div>
-  <div class="invoice-details">
-    <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="row-border hover">
-      <thead style="color: #636363;">
-        <tr>
-          <th style="width: 10%; ">Producto</th>
-          <th style="width: 10%; ">Cantidad</th>
-          <th style="width: 10%; ">Precio Uni.</th>
-          <th style="width: 10%; ">Descuento</th>
-          <th style="width: 10%; ">Precio Total</th>
-        </tr>
-      </thead>
-      <tbody style="color: #767695;">
-        <tr *ngFor="let detalleMovimientos of lstDetalleMovimientos">
-          <td>{{detalleMovimientos.producto_nombre}}</td>
-          <td>{{detalleMovimientos.cantidad}}</td>
-          <td>{{detalleMovimientos.costo}}</td>
-          <td>{{detalleMovimientos.desc_add}}</td>
-          <td>{{detalleMovimientos.precio}}</td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-</div>
-<button class="btn btn-primary" (click)="generarPDF()">
-  <span style="color: white; font-size: 20px;">Guardar como PDF</span>
-</button>
+  <button class="btn btn-primary" (click)="generarPDF()">
+    <span style="color: white; font-size: 20px;">Guardar como PDF</span>
+  </button>
 </div>
