--- a/src/app/components/sales/ver-factura/ver-factura.component.html
+++ b/src/app/components/sales/ver-factura/ver-factura.component.html
@@ -78,7 +78,7 @@
         <br><br>
         <div class="icon-container">
           <label for="total" class="label-input" style="font-size: 14px;">SUBTOTAL IVA 12% :</label>
-          <input type="text" [value]="calcularTotalTarifa12() | number:'1.2-2'" class="cool-input resultado-input"
+          <input type="text" [value]="calcularTotalTarifa12P() | number:'1.2-2'" class="cool-input resultado-input"
             readonly>
         </div>
         <br><br>
