--- a/src/app/components/sales/menuvent/menuvent.component.html
+++ b/src/app/components/sales/menuvent/menuvent.component.html
@@ -166,7 +166,7 @@
                                 data-placement="bottom" (click)="aplicarCambiosDetalle(i)" title="Aplicar"></fa-icon>
                         </ng-container>
                         <fa-icon [icon]="faTrashAlt" class="btn btn-danger" [size]=" 'lg' " data-placement="bottom"
-                            (click)=" eliminarDetalle(detalleMovimientos)" title="Eliminar Modelo Producto"></fa-icon>
+                            (click)=" eliminarDetalle(detalleMovimientos)" title="Eliminar Detalle"></fa-icon>
                     </td>
                 </tr>
             </tbody>
@@ -184,7 +184,7 @@
         <br><br>
         <div class="icon-container">
             <label for="total" class="label-input" style="font-size: 14px;">SUBTOTAL IVA 12% :</label>
-            <input type="text" [value]="calcularTotalTarifa12() | number:'1.2-2'" class="cool-input resultado-input"
+            <input type="text" [value]="calcularTotalTarifa12P() | number:'1.2-2'" class="cool-input resultado-input"
                 readonly>
         </div>
         <br><br>
